Fix css spacing issues

--- a/src/less/views/project.less
+++ b/src/less/views/project.less
@@ -174,10 +174,6 @@ div.projects-list {
     margin-top: 1em;
 }
 
-.ui.segments.projects-list {
-    margin-top: 1em;
-}
-
 .ui.segments > .ui.segment.project-list-project {
     margin-top: 0;
     margin-bottom: 0;
